views/container/style.styl
//link-color = link-color
link-color = #36c
corner-radius = 5px
container-padding = 3px
border-color-grey = #DDD

shadow(opacity, height, width, offset)
	-webkit-box-shadow rgba(0, 0, 0, opacity) height width offset
	-moz-box-shadow rgba(0, 0, 0, opacity) height width offset
	box-shadow rgba(0, 0, 0, opacity) height width offset

border-radius(corner-radius)
	-webkit-border-radius corner-radius
	-moz-border-radius corner-radius
	-o-border-radius corner-radius
	-khtml-border-radius corner-radius
	border-top-left-radius corner-radius corner-radius
	border-top-right-radius corner-radius corner-radius
	border-bottom-right-radius corner-radius corner-radius
	border-bottom-left-radius corner-radius corner-radius

transition-property()
	-webkit-transition-property arguments
	-moz-transition-property arguments
	-o-transition-property arguments
	
transition-duration()
	-webkit-transition-duration arguments
	-moz-transition-duration arguments
	-o-transition-duration arguments

transition-timing-function()
	-webkit-transition-timing-function arguments
	-moz-transition-timing-function arguments
	-o-transition-timing-function arguments

transition()
	-webkit-transition arguments
	-moz-transition arguments
	-o-transition arguments
	transition arguments

body
	
	.container
		margin-top -1em
		position relative
		font-size 0.8em
		padding-left 0em

		.content-container
			padding container-padding
		a.hover
			display block
			border-right 1px solid transparent
			border-left 1px solid transparent
			-webkit-transition-property color, border-color
			-moz-transition-property color, border-color
			-o-transition-property color, border-color

			-webkit-transition-duration .25s, .25s, .25s
			-moz-transition-duration .25s, .25s
			-o-transition-duration .25s, .25s

			-webkit-transition-duration linear, linear, linear
			-moz-transition-duration linear, linear
			-o-transition-duration linear, linear

			h1, h2, h3, h4, h5, p
				transition(color, .25s, linear)
				color black

			p
				color #444
				line-height 1.4em

		a.hover:hover
			color link-color
			border-right-color #4D90F0

		a.hover.highlight-left:hover
			border-right-color transparent
			border-left-color #4D90F0
		a.hover:hover
			h1, h2, h3, h4, h5
				color link-color
			p
				//color #333

		a.hover p.author
			font-family "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif
			font-size 0.7em
			padding-top 2px
			text-transform uppercase


	.rounded
		padding (container-padding + 2) container-padding (container-padding + 2 + 2) container-padding

		a.hover.highlight-right
			margin-right container-padding * -2
		a.hover.highlight-left
			margin-left container-padding * -2

	.rounded-hover
		padding container-padding (container-padding - 1)


	.image-container
		.container
			img
				border-radius corner-radius
				display block
			.content-container
				padding 0px
	.twitter
		.container
			.text
				h3
					margin-bottom 3px
				p
					font-size 0.8em
					line-height 1.2em
					padding-left 1.25em
			img
				padding-left container-padding
				margin-left 3px
				float right
				width 67px
				height 67px
	
	.rounded, .rounded-hover
		border-radius(corner-radius)
		shadow(0.398438, 0px, 1px, 3px)
		background-color white
		background -webkit-gradient(linear,left bottom,left top,color-stop(0, whiteSmoke),color-stop(0.33, white))
		background -moz-linear-gradient(center bottom,whiteSmoke 0%,white 33%)
		float right

	a.rounded-hover
		border-left 1px solid transparent
		border-right 1px solid transparent

		img
			opacity 0.8
			transition opacity 0.25s linear

		h3
			transition color 0.25s linear
		:hover
			img
				opacity 1
			h3
				color #39c


	a.list-story
		color black
		display block
		padding 4px 0px 4px 2px

	a.list-story.first
		padding-top 2px

	a.list-story.last
		padding-bottom 2px



	a.hover:hover
		color link-color
		border-bottom-color #4D90F0
		//background #e9e9e9

		//background transparent -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(237,237,237)),color-stop(.5, rgb(255,255,255)))
		//background transparent -moz-linear-gradient(center bottom,rgb(237,237,237) 0%,rgb(255,255,255) 50%)
		
	
	.vertical-container
		font-size 1em
		writing-mode tb-rl
		filter flipv fliph
		
		-webkit-transform rotate(-90deg)
		-moz-transform rotate(-90deg)
		-o-transform rotate(-90deg)
		white-space nowrap
		display block
		
		float left
		
		-webkit-transform-origin-x 0px
		-webkit-transform-origin-y 100%
		
		-moz-transform-origin 0px 100%
		position relative
		left 1px
		//border-bottom 3px solid #666
		
			
		.vertical
			font-size 0.9em
			color #999
			letter-spacing 1px
			text-shadow 0px 1px 1px white
			text-transform uppercase

	.most-popular ol li
		list-style decimal outside

	.most-popular ol li h2
		margin-left -7px

	.most-popular ol
		margin-left 20px
		font-family Georgia,"Century Schoolbook","Times New Roman",Times,serif

